--- a/Gender-Gap-in-College-Degrees/Gender+Degrees.ipynb
+++ b/Gender-Gap-in-College-Degrees/Gender+Degrees.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "The plots represent the trend in the percentage of Women and Men graduating from various streams over a period from 1968 to 2011.\n",
     "\n",
-    "The plots have divided into 3 columns by grouping the streams into STEM, Liberal Arts and Others.\n",
+    "The plots have been divided into 3 columns by grouping the streams into STEM, Liberal Arts and Others.\n",
     "The plots are arranged top to bottom by the gap in percentage of women to men in the Stream. "
    ]
   },
